fixed: overflow and footer

--- a/css/style.css
+++ b/css/style.css
@@ -1170,7 +1170,7 @@ template {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
-  width: 166px;
+  width: 154px;
   -ms-flex-item-align: stretch;
       -ms-grid-row-align: stretch;
       align-self: stretch;
@@ -1531,9 +1531,9 @@ template {
     padding-top: 69px;
   }
   .footer-wrapper {
-    -ms-grid-columns: repeat 12, 1fr;
-        grid-template-columns: repeat 12, 1fr;
-    grid-row-gap: 40px;
+    -ms-grid-columns: repeat 10, 10%;
+        grid-template-columns: repeat 10, 10%;
+    grid-row-gap: 45px;
   }
   .footer__input {
     -ms-flex-preferred-size: 47%;
@@ -1541,7 +1541,7 @@ template {
   }
   .footer__logo {
     width: 104px;
-    height: 120px;
+    height: 110px;
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1/2;
@@ -1551,13 +1551,13 @@ template {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1/2;
-    grid-column: span 10;
+    grid-column: span 11;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
   }
   .footer__title--inline {
-    margin-right: 27px;
+    margin-right: 46px;
   }
   .footer__title--mb-3 {
     margin-top: 0;
@@ -1566,7 +1566,7 @@ template {
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
-    grid-column: span 4;
+    grid-column: span 5;
   }
   .footer__legal {
     grid-column: span 4;
@@ -1642,6 +1642,7 @@ template {
   }
   .navbar-bottom--visible {
     display: block;
+    overflow: auto;
   }
   .navbar-menu {
     -webkit-box-orient: vertical;
@@ -1946,12 +1947,14 @@ template {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin-bottom: -4px;
   }
   .footer__title {
     margin-bottom: 11px;
   }
   .footer__title--inline {
     margin-bottom: 21px;
+    margin-right: 32px;
   }
   .footer__title--mb-3 {
     margin-top: -16px;
