--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -12,7 +12,7 @@
     margin-bottom: 95px
   &__logo
     grid-row: 1/3
-    width: 166px
+    width: 154px
     align-self: stretch
   &__categories
     grid-row: 1/4
